# canvas-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
media/: usage.mov
src/canvas_download/: __init__.py  __main__.py  browser.py  cli.py  courses.py  dedup.py  scraper.py  utils.py
tests/: test_api.py
