[project]
name = "canvas-download"
version = "0.1.0"
description = "CLI tool to download all files and pages from a Canvas LMS course"
readme = "README.md"
authors = [
    { name = "Erik Heimdal", email = "63123731+ekvanox@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "playwright>=1.40",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]

[project.scripts]
canvas-download = "canvas_download.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
